# dp-rust

./: Cargo.toml  README.md
src/: buzzer.rs  countdowntimer.rs  displayinfo.rs  ds3231.rs  format.rs  i2c.rs  joystick.rs  lm75b.rs  main.rs  speedchanger.rs  ssd1306.rs  stopwatchtimer.rs
src/app_state/: clock.rs  event.rs  mod.rs  navigation.rs  stopwatch.rs  switch.rs  timer.rs
src/i2c_async/: futures.rs  mod.rs  states.rs  transaction.rs
