[package]
authors = ["SpeedCrash100 <SpeedCrash100@yandex.ru>"]
edition = "2018"
readme = "README.md"
name = "dp-rust"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
cortex-m-rtic = "1.1.3"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
embedded-graphics = "0.7.1"
chrono = {version = "0.4.22", default-features=false }

[dependencies.stm32f4xx-hal]
version = "0.13.2"
features = ["stm32f411", "rtic"]

# this lets you use `cargo fix`!
[[bin]]
name = "dp-rust"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
