[package]
authors = ["SpeedCrash100 <SpeedCrash100@yandex.ru>"]
edition = "2021"
readme = "README.md"
name = "dp-rust"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
cortex-m-rtic = "1.1.3"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
embedded-graphics = {version = "0.7.1", git = "https://github.com/embedded-graphics/embedded-graphics.git"}
chrono = {version = "0.4.22", default-features=false }
critical-section = "1.1.1"
spin = "0.9"
atomic_enum = "0.2"
heapless = "0.7.16"
nb = "1.0"

[dependencies.stm32f4xx-hal]
version = "0.13.2"
features = ["stm32f411", "rtic"]
git = "https://github.com/SpeedCrash100/stm32f4xx-hal.git"
branch = "nb-dma-i2c"

# this lets you use `cargo fix`!
[[bin]]
name = "dp-rust"
test = false
bench = false

[profile.release]
opt-level = 'z'
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[profile.dev.package."*"] 
opt-level = "z"
